fixing date on mobile

--- a/styles/Resume.css
+++ b/styles/Resume.css
@@ -180,7 +180,7 @@
   font-size: 14px;
   border-radius: 14px;
   color: var(--white);
-  width: 117px;
+  width: 118px;
   height: 27px;
 }
 .skill-parent {
